fixed broken links and added footer

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -63,6 +63,9 @@
     font-family: var(--font-sans);
     @apply border-border;
   }
+  html {
+    @apply scroll-smooth;
+  }
   body {
     @apply bg-background text-foreground;
   }
